[BI-1915] Fixed IntellaJ 'problems' ade code more readable