@@ -65,10 +65,9 @@ public class TraitFileParser {
     private static final String TRAIT_STATUS_ACTIVE = "active";
     private static final String TRAIT_STATUS_ARCHIVED = "archived";
 
-    private final static Set TRAIT_STATUS_VALID_VALUES = Collections.unmodifiableSet(
-            Set.of(TRAIT_STATUS_ACTIVE, TRAIT_STATUS_ARCHIVED));
+    private final static Set<String> TRAIT_STATUS_VALID_VALUES = Set.of(TRAIT_STATUS_ACTIVE, TRAIT_STATUS_ARCHIVED);
 
-    private TraitFileValidatorError traitValidatorError;
+    private final TraitFileValidatorError traitValidatorError;
 
     @Inject
     public TraitFileParser(TraitFileValidatorError traitValidatorError){
@@ -103,7 +102,6 @@ public class TraitFileParser {
     // no sheets RFC4180
     public List<Trait> parseCsv(@NonNull InputStream inputStream) throws ParsingException, ValidatorException {
 
-        ArrayList<Trait> traits = new ArrayList<>();
         InputStreamReader in = new InputStreamReader(inputStream);
 
         Iterable<CSVRecord> records = null;
@@ -135,7 +133,7 @@ public class TraitFileParser {
                     .build();
 
 
-            Boolean active;
+            boolean active;
             String traitStatus = parseExcelValueAsString(record, TraitFileColumns.STATUS);
             if (traitStatus == null) {
                 active = true;
@@ -145,7 +143,7 @@ public class TraitFileParser {
                             ParsingExceptionType.INVALID_TRAIT_STATUS.toString(), HttpStatus.UNPROCESSABLE_ENTITY);
                     validationErrors.addError(traitValidatorError.getRowNumber(i), error);
                 }
-                active = !traitStatus.toLowerCase().equals(TRAIT_STATUS_ARCHIVED);
+                active = !traitStatus.equalsIgnoreCase(TRAIT_STATUS_ARCHIVED);
             }
 
             // Normalize and capitalize method class
@@ -354,7 +352,7 @@ public class TraitFileParser {
         else if (labelMeaning.length == 1) {
             category.setValue(labelMeaning[0].trim());
         } else if (labelMeaning.length > 2){
-            // The case where there are multiple category delimiters in a value. Could be cause by bad list delimeter.
+            // The case where there are multiple category delimiters in a value. Could be cause by bad list delimiter.
             throw new UnprocessableEntityException("Unable to parse categories");
         }
 
